confik-macros/tests/trybuild/fail-default-empty.stderr
error: Unable to parse provided default as rust expression:
 --> tests/trybuild/fail-default-empty.rs:3:24
  |
3 |     #[confik(default = "")]
  |                        ^^
