confik-macros/tests/trybuild/fail-default-empty.rs
#[derive(confik::Configuration)]
struct Config {
    #[confik(default = "")]
    _param: String,
}

fn main() {}
